--- a/src/02-video.html
+++ b/src/02-video.html
@@ -19,7 +19,7 @@
       allowfullscreen
       allow="autoplay; encrypted-media"
     ></iframe>
-
+    <div class="vimeo-player"></div>
     <script src="js/02-video.js" type="module"></script>
   </body>
 </html>
